--- a/css/custom.css
+++ b/css/custom.css
@@ -99,10 +99,11 @@ aside div {
     margin: 0
 }
 
-aside div img {
+
+/* aside div img {
     border-radius: 50%;
-    max-width: 140px
-}
+    max-width: 140px;
+} */
 
 aside div h1 {
     margin: 15px 0 5px 0
@@ -526,4 +527,8 @@ ul.social a.sc-mastodon {
     box-shadow: 0 0 0 0 rgba(90, 113, 208, 0.11), 0 4px 16px 0 rgba(167, 175, 183, 0.33) !important;
     border: solid 1px #dde4eb !important;
     border-radius: 0px !important;
+}
+
+.tech-logo img {
+    width: 100px;
 }
