--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@
     font-family: 'Ubuntu', sans-serif;
 } */
 
-@import url('./fonts/Arial regular.ttf');
+@import url('../fonts/Arial-regular.ttf');
 * {
     font-family: Arial, Helvetica, sans-serif;
 }
